--- a/views/states.handlebars
+++ b/views/states.handlebars
@@ -201,8 +201,8 @@
                         </div>
 
                     </div>
-                    <img src="/images/{{this.name}}_map.svg" class="col-12 col-md-6 col-lg-5 mx-auto mt-auto mb-5 "
-                        alt="elBayadh map">
+                    <img src="/images/DZ-{{this.mattricule}}.svg" class="col-12 col-md-6 col-lg-5 mx-auto mt-auto mb-5 "
+                        alt="{{this.name}}">
                     <div class="carousel-caption d-none d-md-block text-info">
                         <h5>ولاية {{this.name_ar}}</h5>
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>  -->
